--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "uuid": "2.0.1"
   },
   "devDependencies": {
+    "eslint": "^3.0.1",
+    "eslint-config-standard": "^5.1.0",
+    "eslint-plugin-standard": "^2.0.0",
     "mocha": "1.18.2",
     "should": "7.0.4"
   },
