--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "uuid": "2.0.1"
   },
   "devDependencies": {
-    "eslint": "^3.0.1",
-    "eslint-config-standard": "^5.1.0",
-    "eslint-plugin-standard": "^2.0.0",
+    "eslint": "^3.11.1",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^2.0.1",
     "mocha": "1.18.2",
     "should": "7.0.4"
   },
