--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "nuts-serve",
+  "name": "@ironfly/nuts",
   "version": "3.1.1",
   "description": "Server to make GitHub releases (private) available to download with Squirrel support",
   "main": "./lib/index.js",
-  "homepage": "https://github.com/GitbookIO/nuts",
+  "homepage": "https://github.com/ironflytech/nuts",
   "license": "Apache-2.0",
   "dependencies": {
     "analytics-node": "1.2.2",
@@ -36,7 +36,7 @@
     "should": "7.0.4"
   },
   "bugs": {
-    "url": "https://github.com/GitbookIO/nuts/issues"
+    "url": "https://github.com/ironflytech/nuts/issues"
   },
   "authors": [
     {
@@ -46,7 +46,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/GitbookIO/nuts.git"
+    "url": "https://github.com/ironflytech/nuts.git"
   },
   "scripts": {
     "start": "node bin/web.js",
