--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "github-webhook-handler": "0.5.0",
     "lodash": "^4.15.0",
     "lru-diskcache": "1.1.1",
-    "octocat": "0.10.2",
+    "octocat": "1.1.0",
     "q": "1.2.0",
     "request": "2.83.0",
     "semver": "5.0.1",
@@ -25,7 +25,7 @@
     "strip-bom": "2.0.0",
     "understudy": "4.1.0",
     "urljoin.js": "0.1.0",
-    "uuid": "2.0.1"
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "eslint": "^3.11.1",
